--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Kelly Software Solutions - Visitor COntact Information</title>
+  <title>Kelly Software Solutions - Visitor Contact Information</title>
   <!-- Link to stylesheet using rel and href attributes -->
   <link rel="stylesheet" href="./assets/css/style.css" />
 </head>
