--- a/index.html
+++ b/index.html
@@ -69,14 +69,16 @@
       dignissimos excepturi, explicabo dolorem animi itaque dolorum ipsa minima.</p>
   </section>
 
-  <section id="contact-form" class="input-form">
-    <h2>Visitor Contact Information</h2>
-    Name: <input id="txtName" type="text" />
-    <br />
-    Email: <input id="txtEmail" type="email" />
-    <br />
-    <input id="btnSubmit" type="submit" value="Send" />
-  </section>
+  <form>
+    <section id="contact-form" class="input-form">
+      <h2>Visitor Contact Information</h2>
+      Name: <input id="txtName" type="text" />
+      <br />
+      Email: <input id="txtEmail" type="email" />
+      <br />
+      <input id="btnSubmit" type="submit" value="Send" />
+    </section>
+  </form>
 
   <footer>
     Copyright &copy 2022 Kelly Software Solutions
